--- a/package.json
+++ b/package.json
@@ -35,13 +35,12 @@
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
-    "@typescript-eslint/eslint-plugin": "^8.8.0",
-    "@typescript-eslint/parser": "^8.8.0",
     "@vitest/coverage-v8": "^2.1.1",
     "eslint": "^9.11.1",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
     "typescript": "^5.6.2",
+    "typescript-eslint": "^8.39.1",
     "vite": "^5.4.8",
     "vitest": "^2.1.1"
   }
