--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "companies-house-mcp-server",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "MCP server for Companies House API integration",
   "main": "dist/index.js",
   "type": "module",
+  "bin": {
+    "companies-house-mcp-server": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
